--- a/Source/MvcMovie/Content/Site.css
+++ b/Source/MvcMovie/Content/Site.css
@@ -210,6 +210,8 @@ input[type="submit"] {
     font-size: 1.2em;
     padding: 5px;
 }
+.value{ font-weight: bold;}
+
 
 /* TABLE
 ----------------------------------------------------------*/
