--- a/Source/MvcMovie/Views/Movies/Details.cshtml
+++ b/Source/MvcMovie/Views/Movies/Details.cshtml
@@ -7,8 +7,8 @@
 
 
 
-<div class="vidform"> 
-        @Model.Title<br/> 
+<div class="vidform">  
+        @Form.Label(name: "Email", value: Model.Email) 
 </div>
  
 
