--- a/Source/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/Source/MvcMovie/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
             <nav>
                 <ul id="menu">
                     <li>@Html.ActionLink("Home", "Index", "Movies")</li>
+                    <li>@Html.ActionLink("User", "Index", "Users")</li>
                     <li>@Html.ActionLink("Search", "SearchIndex", "Movies")</li>
                      <li>@Html.ActionLink("Hello World", "Index", "HelloWorld")</li>
                 </ul>
