--- a/Source/MvcMovie/Views/Users/Edit.cshtml
+++ b/Source/MvcMovie/Views/Users/Edit.cshtml
@@ -4,3 +4,24 @@
 }
 
 <h2>Edit</h2>
+
+
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
+
+<div class="vidform">
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true) 
+        @Form.HiddenID(Model.ID)
+        @Form.TextBoxRequired(name: "Email", value: Model.Email) 
+        @Form.Submit()
+    }
+</div>
+ 
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
