--- a/Source/MvcMovie/Views/Movies/Edit.cshtml
+++ b/Source/MvcMovie/Views/Movies/Edit.cshtml
@@ -13,7 +13,11 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true) 
         @Form.HiddenID(Model.ID)
+        //@Form.TextBox(name: "Title", value: Model.Title)  
         @Form.TextBoxRequired(name: "Title", value: Model.Title) 
+        @Form.TextBox(name: "Genre", value: Model.Genre) 
+        @Form.TextBoxNumber(name: "Price", value: Model.Price) 
+        @Form.TextBox(name: "Rating", value: Model.Rating) 
         @Form.Submit()
     }
 </div>
