--- a/Source/MvcMovie/Views/Movies/Index.cshtml
+++ b/Source/MvcMovie/Views/Movies/Index.cshtml
@@ -14,7 +14,7 @@
             Title
         </th> 
         <th>
-            Genre
+            Genre STeVE
         </th>
         <th>
             Price
