--- a/Source/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/Source/MvcMovie/Views/Shared/_Layout.cshtml
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
+    <title>@ViewBag.Title</title> 
+    @Assets.CSS("site.css")
+    @Assets.jQuery() 
+    @Assets.Script("modernizr-1.7.min.js")  
 </head>
 <body>
     <div class="page">
