--- a/Source/MvcMovie/Views/Movies/Details.cshtml
+++ b/Source/MvcMovie/Views/Movies/Details.cshtml
@@ -8,7 +8,10 @@
 
 
 <div class="vidform">  
-        @Form.Label(name: "Email", value: Model.Email) 
+        @Form.Label(name: "Title", value: Model.Title) 
+        @Form.Label(name: "Genre", value: Model.Genre) 
+        @Form.Label(name: "Price", value: Model.Price) 
+        @Form.Label(name: "Rating", value: Model.Rating) 
 </div>
  
 
