fixed create page

--- a/Source/Web/Views/Movies/Create.cshtml
+++ b/Source/Web/Views/Movies/Create.cshtml
@@ -11,9 +11,13 @@
 
 
 <div class="vidform">
-    @using (Html.BeginForm()) { 
+    @using (Html.BeginForm())
+    { 
         @Html.AntiForgeryToken()
         @Form.TextBoxRequired(name: "Title", value: Model.Title) 
+        @Form.TextBox(name: "Genre", value: Model.Genre) 
+        @Form.TextBoxNumber(name: "Price", value: Model.Price) 
+        @Form.TextBox(name: "Rating", value: Model.Rating) 
         @Form.Submit()
     }
 </div>
